--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--<section id="header">-->
         <header>
         <nav class="navbar">
             <h2 class="nav-title">Brian C. Smith</h2>
@@ -16,12 +15,40 @@
             </ul>
           </nav>
         </header>
-    <!--</section>-->
     <section id="about">
         <img src="profile.png" alt="Profile Picture">
-        <p>I am a web developer with a passion for front-end design...</p>
+        <h2>About Me</h2>
+        <p>IT professional with 15 years of experience ranging from sales and support in a small business environment to infrastructure delivery and operations in a large enterprise. Proven ability to learn and master new technologies, facilitate complex technical discussions, collect and analyze business requirements from stakeholders, and mentor fellow team members. </p>
     </section>
-    <section id="skills"></section>
-    <section id="projects"></section>
-    <section id="contact"></section>
+    <section id="skills">
+        <h2 class="title">Skills</h2>
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">PowerShell</div>
+    </section>
+    <section id="projects">
+        <h2 class="title">Projects</h2>
+        <div class="project">
+            <img src="project1.jpg" alt="Project 1">
+            <h3>Project 1</h3>
+            <p>This is a description of the first project.</p>
+        </div>
+        <div class="project">
+            <img src="project2.jpg" alt="Project 2">
+            <h3>Project 2</h3>
+            <p>This is a description of the first project.</p>
+        </div>
+        <div class="project">
+            <img src="project3.jpg" alt="Project 3">
+            <h3>Project 3</h3>
+            <p>This is a description of the first project.</p>
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <div class="contact">
+            <p>Email me at <a href="mailto:brian@smithbrianc.com">brian@smithbrianc.com</a>.</p>
+        </div>
+    </section>
 </body>
